# Ollama-sdk

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ollama-sdk/: Cargo.toml
ollama-sdk-macros/: Cargo.toml  README.md
ollama-sdk-macros/src/: lib.rs
ollama-sdk/examples/: basic_chat.rs  basic_generate.rs  list_models.rs  list_running_models.rs  streaming_chat.rs  streaming_chat_tool_call.rs  streaming_generate.rs
ollama-sdk/src/: builder.rs  client.rs  lib.rs  parser.rs
ollama-sdk/src/stream/: chat_stream_parser.rs  generate_stream_parser.rs  mod.rs
ollama-sdk/src/tools/: mod.rs  registry.rs
ollama-sdk/src/transport/: mock_transport.rs  mod.rs  reqwest_transport.rs
ollama-sdk/src/types/: chat.rs  generate.rs  http.rs  mod.rs  models.rs  shared.rs
ollama-sdk/tests/: chat_stream_parser_tests.rs  client_tests.rs  generate_stream_parser_tests.rs  generic_stream_parser_tests.rs
src/: builder.rs  client.rs  errors.rs  lib.rs  types.rs
src/stream/: chat_stream_parser.rs  generate_stream_parser.rs  mod.rs  parser.rs
src/tools/: mod.rs  registry.rs
src/transport/: mock_transport.rs  mod.rs  reqwest_transport.rs
src/types/: chat.rs  generate.rs  mod.rs
tests/: chat_stream_parser_tests.rs  client_tests.rs  generate_stream_parser_tests.rs  stream_parser_tests.rs
