[package]
name = "ollama-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = []
metrics = ["dep:metrics"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.11", features = ["io"] }
async-trait = "0.1.80"
metrics = { version = "0.24.2", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
