[workspace]
resolver = "2"
members = ["ollama-sdk", "ollama-sdk-macros"]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Sathiyaraman-M <sathiyaraman2003@gmail.com>"]
license = "MIT"
description = "An idiomatic, unofficial Rust client for the Ollama API with support for streaming, tool calling, and custom transports."
keywords = ["ollama", "ai", "llm", "chatbot", "sdk"]
categories = ["api-bindings", "asynchronous", "web-programming"]
repository = "https://github.com/SathiyaramanM/ollama-sdk"

[workspace.dependencies]
ollama-sdk-macros = { path = "ollama-sdk-macros", version = "0.2.3" }
