[package]
name = "ollama-sdk-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme = "./README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.110"
